<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>cn.dinodev</groupId>
    <artifactId>dinodev-spring-boot-starter-parent</artifactId>
    <version>3.5.6.0</version>
    <relativePath>../dino-spring-boot-starter-parent/pom.xml</relativePath>
  </parent>
  <groupId>cn.dinodev</groupId>
  <artifactId>dinodev-spring-commons</artifactId>
  <version>3.5.6.0</version>
  <name>dino-spring-commons</name>
  <description>dino-spring通用功能模块</description>
  <url>https://dinodev.cn/</url>

  <properties>
    <java.version>21</java.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.springframework.data</groupId>
      <artifactId>spring-data-commons</artifactId>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jaxb</groupId>
      <artifactId>jaxb-runtime</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>jakarta.persistence</groupId>
      <artifactId>jakarta.persistence-api</artifactId>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
    </dependency>

    <!-- openapi-v3-->
    <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-starter-common</artifactId>
    </dependency>
    <dependency>
      <groupId>io.swagger.core.v3</groupId>
      <artifactId>swagger-annotations-jakarta</artifactId>
    </dependency>

    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-jdk18on</artifactId>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcpkix-jdk18on</artifactId>
    </dependency>

  </dependencies>

  <licenses>
    <license>
      <name>Apache-2.0 License</name>
      <url>https://opensource.org/licenses/Apache-2.0</url>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:https://github.com/dino-proj/dino-spring.git</connection>
    <developerConnection>scm:git:https://github.com/dino-proj/dino-spring.git</developerConnection>
    <url>https://github.com/dino-proj/dino-spring</url>
  </scm>

  <developers>
    <developer>
      <name>Cody Lu</name>
      <email>tuuboo@gmail.com</email>
    </developer>
  </developers>


</project>